--- a/src/locales/en/obj_navbar.json
+++ b/src/locales/en/obj_navbar.json
@@ -4,5 +4,5 @@
   "contentsPage": "CONTENTS",
   "projectsPage": "PROJECTS",
   "contactPage": "CONTACT",
-  "resumePage": "RESUME"
+  "resumePage": "RÉSUMÉ"
 }
