--- a/src/locales/es/obj_navbar.json
+++ b/src/locales/es/obj_navbar.json
@@ -1,7 +1,7 @@
 {
   "aboutPage": "SOBRE MÍ",
-  "stackPage": "TECNOLOGÍAS",
-  "contentsPage": "CONTENIDO",
+  "stackPage": "STACK",
+  "contentsPage": "CONTENIDOS",
   "projectsPage": "PROYECTOS",
   "contactPage": "CONTACTO",
   "resumePage": "CURRÍCULUM"
