--- a/src/locales/pt/obj_projects.json
+++ b/src/locales/pt/obj_projects.json
@@ -2,20 +2,20 @@
   "title": "Do código à entrega",
   "breadcrumb_begin": "Projetos",
   "breadcrumb_end": "Especificações",
-  "sub_title": "Ao longo da minha carreira, participei na criação de projetos que impactaram positivamente pessoas e negócios. Aqui  é possível navegar por diferentes sites que desenvolvi, que são usados por milhares de pessoas todos os dias. Aqui se encontram a maioria dos projetos que ainda estão ativos, outros foram descontinuados, e alguns não estão listados aqui por motivos contratuais.",
+  "sub_title": "Ao longo da carreira, participei da criação de projetos que impactaram positivamente pessoas e negócios. Aqui você pode navegar por sites que desenvolvi e que são usados por milhares de pessoas todos os dias. A maioria dos projetos listados ainda está ativa; outros foram descontinuados, e alguns não constam aqui por motivos contratuais.",
   "projects_title": "Projetos em foco",
   "projects_all": "Lista completa de projetos",
-  "github": "Projeto disponível no github",
+  "github": "Projeto disponível no GitHub",
   "return": "Voltar",
   "projects": [
     {
       "id": 1,
-      "title": "Portifólio pessoal feito com Next.js, Tailwind e TypeScript",
+      "title": "Portfólio pessoal feito com Next.js, Tailwind e TypeScript",
       "description": "Uma vitrine interativa das minhas habilidades, projetos e testes com novas tecnologias — tudo pensado com foco em usabilidade e evolução constante.",
       "longDescriptionTitle": "Visão geral do projeto",
       "longDescription": [
-        "Bem-vindo ao meu portfólio! Este projeto foi criado e pensado para servir como uma vitrine das minhas habilidades, experiências e projetos realizados ao longo da minha carreira. Aqui, você encontrará uma coleção detalhada do meu trabalho, destacando minhas competências e a dedicação que coloco em cada projeto.",
-        "O design foi inspirado pelos princípios de usabilidade e mobile first, garantindo ao máximo uma navegação intuitiva para que se possa explorar facilmente cada seção e com isso, fornecer uma visão completa dos meus trabalhos como também, ao meu respeito.",
+        "Bem-vindo ao meu portfólio. Este projeto foi pensado como vitrine das minhas habilidades, experiências e trabalhos ao longo da carreira. Aqui você encontra uma coleção do meu trabalho, com foco nas competências e na dedicação que trago a cada projeto.",
+        "O design foi inspirado nos princípios de usabilidade e mobile first, garantindo uma navegação o mais intuitiva possível, para que cada seção seja explorada com facilidade e se tenha uma visão completa dos meus trabalhos e de quem sou."
         "Além disso, este projeto também serve como meu laboratório de testes, onde implemento novas bibliotecas e tecnologias antes de utilizá-las em projetos reais. Isso me permite estar sempre atualizado com as últimas tecnologias do mercado e garantir a qualidade e eficiência em meus trabalhos."
       ],
 
@@ -72,7 +72,7 @@
         "Seção de equipes 'People' com perfis",
         "Lista de áreas de pesquisa",
         "Recursos institucionalizados",
-        "Painel administrativo para controle total das páginas do site "
+        "Painel administrativo para controle total das páginas do site"
       ],
 
       "challengesTitle": "Desafios Técnicos",
@@ -97,10 +97,10 @@
     {
       "id": 3,
       "title": "JA Índio Jiu Jitsu",
-      "description": "Um site desenvolvido para atrair e envolver possíveis alunos em qualquer estágio jornada, do faixa branca ao faixa preta. Com um design responsivo, atrativo e moderno.",
+      "description": "Site desenvolvido para atrair e envolver possíveis alunos em qualquer estágio da jornada, da faixa branca à preta, com design responsivo, atrativo e moderno.",
       "longDescriptionTitle": "Visão geral do projeto",
       "longDescription": [
-        "O projeto da JA Índio Jiu Jitsu, situado na cidade de Pelotas - RS, foi idealizada para ser um site responsivo e organizado que oferece agendamento de aulas gratuitas, informações sobre os horários de aulas, descrições de seus programas (por nível e público), depoimentos, informações de contato e filosofia da academia, com a intenção de divulgar o excelente trabalho da academia, inspirar novos alunos e gerar mais conexão com o público."
+        "O projeto da JA Índio Jiu Jitsu, em Pelotas (RS), foi idealizado como um site responsivo e organizado, oferecendo agendamento de aulas gratuitas, horários, descrição dos programas (por nível e público), depoimentos, contato e filosofia da academia — com o objetivo de divulgar o trabalho da casa, inspirar novos alunos e fortalecer a conexão com o público."
       ],
 
       "stackTitle": "Stack Tecnológico",
@@ -109,7 +109,7 @@
       "features": [
         "Apresentação institucional da academia",
         "Calendário de aulas",
-        "Detalhamento da apresentação dos programas da academia",
+        "Detalhamento dos programas da academia",
         "CTA com possibilidade de inscrição online",
         "Layout responsivo",
         "Galeria de fotos",
@@ -136,11 +136,11 @@
     {
       "id": 4,
       "title": "EducaCross",
-      "description": "Plataforma educativa híbrida e gamificada, com mais de 2.000 jogos alinhados à BNCC, adaptadas às necessidades de cada aluno. Oferece dashboards para professores, suporte pedagógico e uso multiplataforma.",
+      "description": "Plataforma educacional híbrida e gamificada, com mais de 2.000 jogos alinhados à BNCC e adaptados às necessidades de cada aluno. Oferece dashboards para professores, suporte pedagógico e uso multiplataforma.",
       "longDescriptionTitle": "Visão geral do projeto",
       "longDescription": [
-        "Durante meu período de trabalho na nav9.tech, tive a oportunidade de ser um parceiro de tecnologia de várias empresas e dentre elas, tive o prazer de trabalhar em diversas frentes de desenvolvimento da versão 2.0 da plataforma da Educacross.",
-        "É uma plataforma de EdTech robusta e moderna voltada para o ensino de Matemática, Língua Portuguesa, Lógica e alfabetização, com foco em Educação Infantil e Ensino Fundamental. Conta com mais de 2.000 jogos digitais alinhados à BNCC (Base Nacional Comum Curricular), a plataforma combina gamificação adaptativa, aprendizagem híbrida e relatórios em tempo real para envolver crianças de 3 a 12 anos.",
+        "Durante meu período na nav9.tech, tive a oportunidade de atuar como parceiro de tecnologia de várias empresas; entre elas, trabalhei em diversas frentes de desenvolvimento da versão 2.0 da plataforma EducaCross.",
+        "É uma plataforma EdTech robusta e moderna, voltada ao ensino de Matemática, Língua Portuguesa, Lógica e alfabetização, com foco em Educação Infantil e Ensino Fundamental. Com mais de 2.000 jogos digitais alinhados à BNCC (Base Nacional Comum Curricular), combina gamificação adaptativa, aprendizagem híbrida e relatórios em tempo real para envolver crianças de 3 a 12 anos.",
         "Educadores e gestores têm acesso a dashboards avançados que permitem traçar trilhas personalizadas, monitorar o progresso dos alunos, e visualizar dados alinhados à BNCC. Além disso, há suporte pedagógico e formação continuada para professores, criando uma conexão efetiva entre tecnologia e prática educativa.",
         "A plataforma é compatível com uso em sala de aula, laboratórios, dispositivos móveis e offline, promovendo inclusão digital nas escolas. A arquitetura híbrida do produto prioriza segurança (LGPD), acessibilidade e escalabilidade, já que está presente em mais de 1.700 escolas, com milhares de usuários ativos."
       ],
@@ -165,7 +165,7 @@
         "Segurança e proteção de dados escolares",
         "Compatibilidade multiplataforma",
         "Alinhamento com padrões educacionais (BNCC)",
-        "Formatação de design exclusiva para escolas dependendo do tipo de login acesso"
+        "Layout exclusivo conforme o tipo de acesso (perfil de escola)"
       ],
 
       "achievementsTitle": "Resultados Alcançados",
@@ -182,8 +182,8 @@
       "description": "O Portal Iguatemi é um B2B bem protegido que permite o lojista acessar informações de seu contrato, enviar documentos e participar de oportunidades de marketing dentro da rede Iguatemi, tudo seguindo os padrões de LGPD.",
       "longDescriptionTitle": "Visão geral do projeto",
       "longDescription": [
-        "Durante meu período de trabalho na nav9.tech, tive a oportunidade de ser um parceiro de tecnologia de várias empresas e dentre elas, tive o prazer de colaborar por mais de 3 anos no desenvolvimento dos produtos dos shoppings Iguatemi, tendo como principal o Portal do Lojista.",
-        "O Portal do Lojista é uma área exclusiva para donos de loja e seus colaboradores, voltada à comunicação corporativa, informação de vendas, gestão de contratos, auditoria fiscal, recebimento de boletos, resgate de benefícios, notícias, promoções e demais processos internos. Os usuários realizam login em uma interface encriptada e segura, com autenticação por usuário e senha, seguindo todos padrões de segurança do LGPD para fornecer o acesso as funções respectivas do usuário e contrato."
+        "Durante meu período na nav9.tech, atuei como parceiro de tecnologia de várias empresas; entre elas, colaborei por mais de 3 anos no desenvolvimento dos produtos dos Shoppings Iguatemi, com foco no Portal do Lojista.",
+        "O Portal do Lojista é uma área exclusiva para donos de loja e seus colaboradores, voltada à comunicação corporativa, informação de vendas, gestão de contratos, auditoria fiscal, recebimento de boletos, resgate de benefícios, notícias, promoções e demais processos internos. Os usuários acessam por uma interface criptografada e segura, com autenticação por usuário e senha, em conformidade com a LGPD, garantindo acesso às funções conforme o perfil e o contrato."
       ],
 
       "stackTitle": "Stack Tecnológico",
@@ -195,7 +195,7 @@
         "Solicitação de serviços",
         "Controle de usuários",
         "Painel de boletos para pagar e histórico",
-        "Aduitoria Fiscal",
+        "Auditoria fiscal",
         "Resgate e visualização de benefícios",
         "Geolocalização de shoppings"
       ],
@@ -204,7 +204,7 @@
       "challenges": [
         "Gestão de acessos paralelos",
         "Conformidade com LGPD e segurança da informação",
-        "Segurança e proteção de dados escolares",
+        "Proteção de dados de lojistas e contratos",
         "Relatórios financeiros corporativos",
         "SEO e performance para múltiplas seções"
       ],
@@ -220,11 +220,11 @@
     },
     {
       "id": 6,
-      "title": "Portifólio v2",
-      "description": "Versão 2.0 do meu portifólio, que agora está descontinuado.",
+      "title": "Portfólio v2",
+      "description": "Versão 2.0 do meu portfólio, atualmente descontinuada.",
       "longDescriptionTitle": "Visão geral do projeto",
       "longDescription": [
-        "O objetivo é o mesmo da versão atual, divulgação do trabalho, estudos e testes. Fique a vontade para acessa-lo e explorar a antiga versão."
+        "O objetivo era o mesmo da versão atual: divulgar o trabalho, estudos e testes. Sinta-se à vontade para acessar e explorar a versão anterior."
       ],
 
       "stackTitle": "Stack Tecnológico",
@@ -260,7 +260,7 @@
       "description": "Uma página de currículo online minimalista e altamente funcional, exibindo seções claras de experiência, stack, projetos e contato, com animações leves, design responsivo e performance otimizada.",
       "longDescriptionTitle": "Visão geral do projeto",
       "longDescription": [
-        "O objetivo é ser uma página de currículo online com foco em performance, clareza e responsividade. Criado com tecnologias modernas, o site apresenta uma estrutura limpa e organizada, que permite a navegação fluida pelas seções de apresentação. Ele é inteiramente mobile-first, garantindo ótima experiência de leitura e interação em qualquer dispositivo, com transições suaves e animações discretas."
+        "O objetivo é oferecer uma página de currículo online com foco em performance, clareza e responsividade. Desenvolvido com tecnologias modernas, o site tem estrutura limpa e organizada, com navegação fluida entre as seções. É inteiramente mobile-first, com boa experiência de leitura e interação em qualquer dispositivo, transições suaves e animações discretas."
       ],
 
       "stackTitle": "Stack Tecnológico",
@@ -291,7 +291,7 @@
 
   "contact": {
     "title": "Pronto para um pull request de ideias",
-    "description": "Estou aberto para novos projetos, consultorias e trocar informações sobre construção de produtos digitais ou desenvolvimento de jogos, sinta-se à vontade para me enviar uma mensagem no <b><a href='https://www.linkedin.com/in/ffzanini/' target='_blank'>LinkedIn</a></b> ou deixar um recado na ",
+    "description": "Estou aberto a novos projetos, consultorias e trocas sobre construção de produtos digitais ou desenvolvimento de jogos. Sinta-se à vontade para me enviar uma mensagem no <b><a href='https://www.linkedin.com/in/ffzanini/' target='_blank'>LinkedIn</a></b> ou deixar um recado na ",
     "contact": "página de contato."
   }
 }
